--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,7 @@
       <!-- bower:css -->
       <!-- endbower -->
     <!-- endbuild -->
+    <link rel="stylesheet" href="bower_components/flatui/css/flat-ui.css">  <!-- added by Dario -->
     <!-- build:css({.tmp,client}) app/app.css -->
       <link rel="stylesheet" href="app/app.css">
       <!-- injector:css -->
