--- a/client/index.html
+++ b/client/index.html
@@ -71,8 +71,7 @@
       <script src="app/account/account.js"></script>
       <script src="app/admin/admin.router.js"></script>
       <script src="app/app.constant.js"></script>
-      <script src="app/main/main.controller.js"></script>
-      <script src="app/main/main.js"></script>
+
       <script src="app/pokedex/pokedex.controller.js"></script>
       <script src="app/pokedex/pokedex.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
@@ -92,5 +91,7 @@
       <script src="components/util/util.service.js"></script>
       <!-- endinjector -->
     <!-- endbuild -->
+      <!-- <script src="app/main/main.controller.js"></script> -->
+      <!-- <script src="app/main/main.js"></script> -->
   </body>
 </html>
