added update view/methods

--- a/client/app/pokedex/pokedex.view.html
+++ b/client/app/pokedex/pokedex.view.html
@@ -5,3 +5,4 @@
 </p>
 
 <button ng-click="deletePokemon()" class="delete-btn btn btn-block btn-lg btn-warning">Delete</button>
+<button ng-click="goEditPokemon()" class="delete-btn btn btn-block btn-lg btn-success">Edit</button>
