--- a/client/index.html
+++ b/client/index.html
@@ -73,6 +73,7 @@
       <script src="app/app.constant.js"></script>
       <script src="app/pokedex/pokedex.controller.js"></script>
       <script src="app/pokedex/pokedex.js"></script>
+      <script src="app/pokemonService/pokemonService.service.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
       <script src="components/auth/auth.service.js"></script>
       <script src="app/account/login/login.controller.js"></script>
